--- a/index.html
+++ b/index.html
@@ -1,85 +1,135 @@
-import React, { useState, useEffect } from "react";
-import { format, startOfMonth, endOfMonth, eachDayOfInterval, getDay } from "date-fns";
-import { motion } from "framer-motion";
-import "tailwindcss/tailwind.css";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notion Calendar Widget</title>
+    <style>
+        body {
+            background-color: #242B26;
+            color: white;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        #root {
+            width: 350px;
+            padding: 20px;
+            background: #333;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        }
+        button {
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <div id="root"></div>
 
-const CalendarWidget = () => {
-  const [selectedDate, setSelectedDate] = useState(null);
-  const [databaseId, setDatabaseId] = useState("");
-  const [notionData, setNotionData] = useState(null);
+    <!-- React and Babel CDN -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/dist/date-fns.min.js"></script>
 
-  const currentMonth = new Date();
-  const days = eachDayOfInterval({
-    start: startOfMonth(currentMonth),
-    end: endOfMonth(currentMonth),
-  });
+    <script type="text/babel">
+        const { useState, useEffect } = React;
+        const { format, startOfMonth, endOfMonth, eachDayOfInterval, getDay } = dateFns;
 
-  useEffect(() => {
-    if (selectedDate && databaseId) {
-      fetchNotionData(selectedDate);
-    }
-  }, [selectedDate, databaseId]);
+        function CalendarWidget() {
+            const [selectedDate, setSelectedDate] = useState(null);
+            const [databaseId, setDatabaseId] = useState("");
+            const [notionData, setNotionData] = useState(null);
 
-  const fetchNotionData = async (date) => {
-    const notionAPIKey = "your-secret-api-key"; // Replace with actual API key
-    const formattedDate = format(date, "yyyy-MM-dd");
-    
-    const response = await fetch("https://api.notion.com/v1/databases/" + databaseId + "/query", {
-      method: "POST",
-      headers: {
-        "Authorization": `Bearer ${notionAPIKey}`,
-        "Content-Type": "application/json",
-        "Notion-Version": "2022-06-28",
-      },
-      body: JSON.stringify({
-        filter: {
-          property: "Date",
-          date: {
-            equals: formattedDate,
-          },
-        },
-        page_size: 1,
-      }),
-    });
-    const data = await response.json();
-    setNotionData(data.results[0] || null);
-  };
+            const currentMonth = new Date();
+            const days = eachDayOfInterval({
+                start: startOfMonth(currentMonth),
+                end: endOfMonth(currentMonth),
+            });
 
-  return (
-    <div className="bg-[#242B26] text-white p-4 rounded-xl w-80 shadow-lg">
-      <h2 className="text-lg font-bold text-center">{format(currentMonth, "MMMM yyyy")}</h2>
-      <div className="grid grid-cols-7 gap-2 mt-4">
-        {[...Array(getDay(days[0]))].map((_, i) => (
-          <div key={i} className="opacity-0">-</div>
-        ))}
-        {days.map((day) => (
-          <motion.button
-            key={day}
-            whileTap={{ scale: 0.9 }}
-            onClick={() => setSelectedDate(day)}
-            className="p-2 rounded-md text-center transition duration-200 hover:bg-green-500"
-          >
-            {format(day, "d")}
-          </motion.button>
-        ))}
-      </div>
-      <div className="mt-4">
-        <input
-          type="text"
-          placeholder="Enter Notion Database ID"
-          className="w-full p-2 text-black rounded-md"
-          value={databaseId}
-          onChange={(e) => setDatabaseId(e.target.value)}
-        />
-      </div>
-      {notionData && (
-        <div className="mt-4 bg-gray-800 p-3 rounded-md">
-          <h3 className="font-bold">Entry for {format(selectedDate, "PPP")}:</h3>
-          <p>{notionData.properties.Name.title[0]?.plain_text || "No data found"}</p>
-        </div>
-      )}
-    </div>
-  );
-};
+            useEffect(() => {
+                if (selectedDate && databaseId) {
+                    fetchNotionData(selectedDate);
+                }
+            }, [selectedDate, databaseId]);
 
-export default CalendarWidget;
+            async function fetchNotionData(date) {
+                const notionAPIKey = "your-secret-api-key"; // Replace with actual API key
+                const formattedDate = format(date, "yyyy-MM-dd");
+
+                const response = await fetch("https://api.notion.com/v1/databases/" + databaseId + "/query", {
+                    method: "POST",
+                    headers: {
+                        "Authorization": `Bearer ${notionAPIKey}`,
+                        "Content-Type": "application/json",
+                        "Notion-Version": "2022-06-28",
+                    },
+                    body: JSON.stringify({
+                        filter: {
+                            property: "Date",
+                            date: {
+                                equals: formattedDate,
+                            },
+                        },
+                        page_size: 1,
+                    }),
+                });
+
+                const data = await response.json();
+                setNotionData(data.results[0] || null);
+            }
+
+            return (
+                <div>
+                    <h2 style={{ textAlign: "center" }}>{format(currentMonth, "MMMM yyyy")}</h2>
+                    <div style={{ display: "grid", gridTemplateColumns: "repeat(7, 1fr)", gap: "5px", marginTop: "10px" }}>
+                        {Array.from({ length: getDay(days[0]) }).map((_, i) => (
+                            <div key={i} style={{ opacity: 0 }}>-</div>
+                        ))}
+                        {days.map((day) => (
+                            <button
+                                key={day}
+                                onClick={() => setSelectedDate(day)}
+                                style={{
+                                    padding: "10px",
+                                    borderRadius: "5px",
+                                    textAlign: "center",
+                                    background: "gray",
+                                    border: "none",
+                                    color: "white",
+                                    transition: "0.2s",
+                                    cursor: "pointer",
+                                }}
+                                onMouseOver={(e) => (e.target.style.background = "green")}
+                                onMouseOut={(e) => (e.target.style.background = "gray")}
+                            >
+                                {format(day, "d")}
+                            </button>
+                        ))}
+                    </div>
+                    <div style={{ marginTop: "15px" }}>
+                        <input
+                            type="text"
+                            placeholder="Enter Notion Database ID"
+                            style={{ width: "100%", padding: "10px", borderRadius: "5px", border: "none" }}
+                            value={databaseId}
+                            onChange={(e) => setDatabaseId(e.target.value)}
+                        />
+                    </div>
+                    {notionData && (
+                        <div style={{ marginTop: "15px", background: "#444", padding: "10px", borderRadius: "5px" }}>
+                            <h3>Entry for {format(selectedDate, "PPP")}:</h3>
+                            <p>{notionData.properties?.Name?.title?.[0]?.plain_text || "No data found"}</p>
+                        </div>
+                    )}
+                </div>
+            );
+        }
+
+        ReactDOM.createRoot(document.getElementById("root")).render(<CalendarWidget />);
+    </script>
+</body>
+</html>
