--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/dist/date-fns.min.js"></script>
 
-    <script type="text/babel">
+    <script type="text/javascript">
         const { useState, useEffect } = React;
         const { format, startOfMonth, endOfMonth, eachDayOfInterval, getDay } = dateFns;
 
