--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 });
 
                 const data = await response.json();
-                setNotionData(data.results[0] || null);
+                setNotionData(data.results.length > 0 ? data.results[0] : null);
             }
 
             return (
@@ -122,7 +122,12 @@
                     {notionData && (
                         <div style={{ marginTop: "15px", background: "#444", padding: "10px", borderRadius: "5px" }}>
                             <h3>Entry for {format(selectedDate, "PPP")}:</h3>
-                            <p>{notionData.properties?.Name?.title?.[0]?.plain_text || "No data found"}</p>
+                            <p>{notionData.properties && notionData.properties.Name 
+                                && notionData.properties.Name.title 
+                                && notionData.properties.Name.title.length > 0 
+                                ? notionData.properties.Name.title[0].plain_text 
+                                : "No data found"}
+                            </p>
                         </div>
                     )}
                 </div>
